Tailscale VPN Node:  - fix some issues with build;  - update pom version;  - add workflow dispatch for Lambda CI-CD pipeline.